# translate_renpy_game

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: build.yml
src/: cmd.rs  main.rs
