[package]
name = "translate_renpy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
serde_json = "1.0.89"
serde = { version = "1.0.147", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.3"
encoding = "0.2"
anyhow = "1.0.66"
